<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/i_kap_no"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/address_item_text" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tesisat_no_saya_mrk"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/address_item_text" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/abone_unv_saya_no"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/address_item_text" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/say_ser"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/address_item_text" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/durum"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/address_item_text" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/abone_unv"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/address_item_text" />

</LinearLayout>