<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/yap_lan_tespiti_se_iniz"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/rdgAuditConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <RadioButton
                android:id="@+id/rd_mbs_uptodate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/zaten_abone_sayac_mbs_de_g_ncel" />

            <RadioButton
                android:id="@+id/rd_mbs_not_uptodate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zaten_abone_sayac_mbs_de_g_ncel_de_il" />

            <RadioButton
                android:id="@+id/rd_subscribed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abone_de_il_abone_yap_ld_" />

            <RadioButton
                android:id="@+id/rd_not_subscribed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/abone_de_il_abone_yap_lamad_" />

            <RadioButton
                android:id="@+id/rd_info_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kontrol_edildi_girilen_bilgiler_do_ru" />

            <RadioButton
                android:id="@+id/rd_not_need_subscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abone_yap_lmas_na_gerek_yok" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/abone_denetim_formu"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtFormSerNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/a_klama"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/txtFormDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnSaveAudit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tespiti_kaydet" />
    </LinearLayout>

</ScrollView>