<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:text="@string/i_kap_no"
        android:textColor="@color/address_item_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:text="@string/dash"
        android:textColor="@color/address_item_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:text="@string/tespit"
        android:textColor="@color/address_item_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:text="@string/dash"
        android:textColor="@color/address_item_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:text="@string/tespit_tarihi"
        android:textColor="@color/address_item_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:text="@string/dash"
        android:textColor="@color/address_item_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:text="@string/tespit_durumu"
        android:textColor="@color/address_item_text" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:text="@string/dash"
        android:textColor="@color/address_item_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:text="@string/tespit_yap_lan_durum"
        android:textColor="@color/address_item_text" />

</LinearLayout>