<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="262dp"
        android:layout_marginTop="122dp"
        android:text="@string/yeni_ifre" />

    <EditText
        android:id="@+id/edtNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:ems="10" />

    <Button
        android:id="@+id/btnSavePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/kaydet" />

    <TextView
        android:id="@+id/txtSelectedUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/btnSavePassword"
        android:text="@string/pre_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtNewPass"
        android:layout_marginBottom="34dp"
        android:layout_marginRight="12dp"
        android:layout_toLeftOf="@+id/edtNewPass"
        android:text="@string/kullan_c_ad_"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
